# models/category.js
@@ -1,0 +1,23 @@
+const mongoose = require('mongoose');
+
+const categorySchema = new mongoose.Schema(
+    {
+        name: {
+            type: String,
+            required: true,
+            trim: true,
+            minlength: 2,
+            maxlength: 100
+        },
+        description: {
+            type: String,
+            trim: true,
+            maxlength: 500
+        }
+    },
+    {
+        timestamps: true
+    }
+);
+
+module.exports = mongoose.model('Category', categorySchema);
